permission for actions

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,9 +1,10 @@
-name: Node.js CI
+name: Build and Deploy
 
 on:
   push:
     branches: [main]
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
