--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "highlight.js": "^11.9.0",
     "next": "13.5.6",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
