--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint": "10.0.0",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "^0.2.4",
     "highlight.js": "^11.9.0",
     "next": "16.1.5",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "remark-github-blockquote-alert": "^2.0.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
