--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.2",
     "eslint": "10.0.0",
     "eslint-config-next": "^0.2.4",
+    "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
     "next": "16.1.5",
     "postcss": "^8.4.31",
